--- a/metadata.yaml
+++ b/metadata.yaml
@@ -2,7 +2,7 @@ authors:
 - affiliation: ECOTEC University
   name: Jesus Rafael Hechavarria-Hernandez
 - affiliation: ECOTEC University
-  name: Kelvin Sanoja
+  name: Kelvin Sanoja-Lopez
 - affiliation: ECOTEC University
   name: Rafael Luque
 columns:
